--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Geometry.cs" />
+    <Compile Include="IO\Common\BinarySourceInfo.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="MaterialFlags.cs" />
     <Compile Include="Mesh.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="ModelExtension.cs" />
     <Compile Include="ModelExtensionHeader.cs" />
     <Compile Include="ModelBinaryExtension.cs" />
+    <Compile Include="ModelExtensionIdentifier.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Primitives\BoundingBox.cs" />
     <Compile Include="IO\Common\Bits.cs" />
@@ -92,7 +94,10 @@
     <Compile Include="Primitives\Color.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.cs" />
+    <Compile Include="ResourceDescriptor.cs" />
+    <Compile Include="ResourceFileType.cs" />
     <Compile Include="ResourceHeader.cs" />
+    <Compile Include="ResourceIdentifier.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="TexturePack.cs" />
     <Compile Include="Textures\Processing\BitmapHelper.cs" />
@@ -110,13 +115,11 @@
     <Compile Include="TextureWrapMode.cs" />
     <Compile Include="Primitives\Triangle.cs" />
     <Compile Include="UnexpectedDataException.cs" />
-    <Compile Include="VifCommandBuffer.cs" />
+    <Compile Include="PS2\VIF\VifCodeStreamBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Maths\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
