Model: turns out 2 really old MB models have a mesh list pointer stored in the node itself.. interesting

--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MeshBatchType7.cs" />
     <Compile Include="MeshBatchType8.cs" />
     <Compile Include="MeshFlags.cs" />
+    <Compile Include="MeshList.cs" />
     <Compile Include="MeshNodeBatchType7.cs" />
     <Compile Include="MeshType.cs" />
     <Compile Include="MeshType7.cs" />
