--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -56,12 +56,15 @@
     <Compile Include="Material.cs" />
     <Compile Include="MaterialFlags.cs" />
     <Compile Include="Mesh.cs" />
-    <Compile Include="MeshBatchType7.cs" />
-    <Compile Include="MeshBatchType8.cs" />
+    <Compile Include="MeshType1Batch.cs" />
+    <Compile Include="MeshType1BatchRenderMode.cs" />
+    <Compile Include="MeshType7Batch.cs" />
+    <Compile Include="MeshType8Batch.cs" />
     <Compile Include="MeshFlags.cs" />
     <Compile Include="MeshList.cs" />
-    <Compile Include="MeshNodeBatchType7.cs" />
+    <Compile Include="MeshType7NodeBatch.cs" />
     <Compile Include="MeshType.cs" />
+    <Compile Include="MeshType1.cs" />
     <Compile Include="MeshType7.cs" />
     <Compile Include="MeshType8.cs" />
     <Compile Include="MeshTypeTraits.cs" />
