--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MeshType1BatchRenderMode.cs" />
     <Compile Include="MeshType5.cs" />
     <Compile Include="MeshType5BlendShape.cs" />
+    <Compile Include="MeshType5NodeSplit.cs" />
     <Compile Include="MeshType7Batch.cs" />
     <Compile Include="MeshType8Batch.cs" />
     <Compile Include="MeshFlags.cs" />
