Material presets & general improvements IO: Add extra constructor to set the filename for stream sources, and increase buffer size TagName: refactor to be more easy to use Triangle: add Contains method to easily check if a triangle contains an index Materials: refactor 'ShortArray' into 'OverlayTextureIds' and implement usage of material presets MeshType5: second material index field (??) discovered MeshType7: use flags instead of checking for null ModelPack: more work on replace functionality (still WIP) and speed up IO by read/writing from memory MeshType8: use flags instead of checking for null Node: fix Transform matrix being calculated incorrectly

--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -38,6 +38,9 @@
     <Reference Include="AssimpNet">
       <HintPath>..\..\..\GFDStudio\Dependencies\Assimp.Net\AssimpNet.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -60,6 +63,7 @@
     <Compile Include="IO\Common\BinarySourceInfo.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="MaterialFlags.cs" />
+    <Compile Include="MaterialPresetStore.cs" />
     <Compile Include="Mesh.cs" />
     <Compile Include="MeshType1Batch.cs" />
     <Compile Include="MeshType1BatchRenderMode.cs" />
@@ -120,7 +124,9 @@
     <Compile Include="ResourceDescriptor.cs" />
     <Compile Include="ResourceFileType.cs" />
     <Compile Include="ResourceHeader.cs" />
+    <Compile Include="ResourceReference.cs" />
     <Compile Include="ResourceIdentifier.cs" />
+    <Compile Include="ResourceStore.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="TexturePack.cs" />
     <Compile Include="Texturing\ImportFormats\DDS\DDSCodec.cs" />
@@ -149,6 +155,7 @@
     <Compile Include="Primitives\Triangle.cs" />
     <Compile Include="UnexpectedDataException.cs" />
     <Compile Include="PS2\VIF\VifCodeStreamBuilder.cs" />
+    <Compile Include="Utilities\ByteArrayExtensions.cs" />
     <Compile Include="Utilities\ListExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
