--- a/Source/DDS3ModelLibraryCLI/DDS3ModelLibraryCLI.csproj
+++ b/Source/DDS3ModelLibraryCLI/DDS3ModelLibraryCLI.csproj
@@ -35,9 +35,6 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AssimpNet">
-      <HintPath>..\..\..\GFDStudio\Dependencies\Assimp.Net\AssimpNet.dll</HintPath>
-    </Reference>
     <Reference Include="AtlusFileSystemLibrary">
       <HintPath>..\..\..\AtlusFileSystemLibrary\Source\AtlusFileSystemLibrary\bin\Debug\AtlusFileSystemLibrary.dll</HintPath>
     </Reference>
@@ -66,6 +63,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AssimpNet">
+      <Version>4.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1-beta1</Version>
     </PackageReference>
