Mesh type 1: fix wrong sign for indices Mesh type 2: implement read/write IO and decoding Mesh: extend base class with extra properties (more on this later) Test: add obj export for testing

--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Mesh.cs" />
     <Compile Include="MeshType1Batch.cs" />
     <Compile Include="MeshType1BatchRenderMode.cs" />
+    <Compile Include="MeshType2.cs" />
+    <Compile Include="MeshType2Batch.cs" />
+    <Compile Include="MeshType2NodeBatch.cs" />
+    <Compile Include="MeshType2NodeBatchContext.cs" />
     <Compile Include="MeshType5.cs" />
     <Compile Include="MeshType5BlendShape.cs" />
     <Compile Include="MeshType5NodeSplit.cs" />
