--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -67,6 +67,7 @@
     <Compile Include="MaterialFlags.cs" />
     <Compile Include="MaterialPresetStore.cs" />
     <Compile Include="Mesh.cs" />
+    <Compile Include="MeshFlagsHelper.cs" />
     <Compile Include="MeshType1Batch.cs" />
     <Compile Include="MeshType1BatchRenderMode.cs" />
     <Compile Include="MeshType2.cs" />
@@ -75,7 +76,7 @@
     <Compile Include="MeshType2NodeBatchContext.cs" />
     <Compile Include="MeshType5.cs" />
     <Compile Include="MeshType5BlendShape.cs" />
-    <Compile Include="MeshType5NodeSplit.cs" />
+    <Compile Include="MeshType5NodeBatch.cs" />
     <Compile Include="MeshType7Batch.cs" />
     <Compile Include="MeshType8Batch.cs" />
     <Compile Include="MeshFlags.cs" />
