--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -61,7 +61,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FieldObject.cs" />
+    <Compile Include="FieldObjectField14Data.cs" />
+    <Compile Include="FieldObjectField14DataField04Data.cs" />
+    <Compile Include="FieldObjectList.cs" />
+    <Compile Include="FieldObjectTransform.cs" />
+    <Compile Include="FieldObjectType.cs" />
+    <Compile Include="FieldResource.cs" />
+    <Compile Include="FieldResourceHeader.cs" />
+    <Compile Include="FieldScene.cs" />
     <Compile Include="Geometry.cs" />
+    <Compile Include="IFieldObjectResource.cs" />
     <Compile Include="IO\Common\BinarySourceInfo.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="MaterialFlags.cs" />
@@ -94,6 +104,7 @@
     <Compile Include="ModelExtensionIdentifier.cs" />
     <Compile Include="Modeling\Utilities\AssimpHelper.cs" />
     <Compile Include="Modeling\Utilities\Matrix4x4Extension.cs" />
+    <Compile Include="Modeling\Utilities\QuaternionExtensions.cs" />
     <Compile Include="Modeling\Utilities\TagName.cs" />
     <Compile Include="Modeling\Utilities\TagNameParseException.cs" />
     <Compile Include="Modeling\Utilities\TagNameParser.cs" />
@@ -171,7 +182,9 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Maths\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AssimpNet.4.1.0\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.4.1.0\build\AssimpNet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
