FieldScene, Model: improve replace support

--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -106,6 +106,7 @@
     <Compile Include="ModelExtensionHeader.cs" />
     <Compile Include="ModelBinaryExtension.cs" />
     <Compile Include="ModelExtensionIdentifier.cs" />
+    <Compile Include="Modeling\Utilities\AssimpExtensions.cs" />
     <Compile Include="Modeling\Utilities\AssimpHelper.cs" />
     <Compile Include="Modeling\Utilities\Matrix4x4Extension.cs" />
     <Compile Include="Modeling\Utilities\QuaternionExtensions.cs" />
