--- a/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
+++ b/Source/DDS3ModelLibrary/DDS3ModelLibrary.csproj
@@ -61,7 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\AbstractResource.cs" />
     <Compile Include="IO\Common\EndianBinaryWriter.ExplicitWriteMethods.cs" />
+    <Compile Include="IO\Common\IBinarySerializableExtensions.cs" />
     <Compile Include="IO\Common\Utilities\EncodingExtensions.cs" />
     <Compile Include="Models\Field\FieldEffect.cs" />
     <Compile Include="Models\Field\FieldLight.cs" />
@@ -71,8 +73,8 @@
     <Compile Include="Models\Field\FieldObjectResourceType3.cs" />
     <Compile Include="Models\Field\FieldObjectTransform.cs" />
     <Compile Include="Models\Field\FieldObjectResourceType.cs" />
-    <Compile Include="Models\Field\FieldResource.cs" />
-    <Compile Include="Models\Field\FieldResourceHeader.cs" />
+    <Compile Include="IO\FieldResource.cs" />
+    <Compile Include="IO\FieldResourceHeader.cs" />
     <Compile Include="Models\Field\FieldScene.cs" />
     <Compile Include="Models\Field\FieldSceneField1CData.cs" />
     <Compile Include="Models\Field\FieldTextureListFileName.cs" />
@@ -85,7 +87,7 @@
     <Compile Include="Models\Mesh.cs" />
     <Compile Include="Models\MeshFlagsHelper.cs" />
     <Compile Include="Models\MeshTypes\MeshType1Batch.cs" />
-    <Compile Include="Models\MeshTypes\MeshType1BatchRenderMode.cs" />
+    <Compile Include="Models\MeshTypes\MeshBatchRenderMode.cs" />
     <Compile Include="Models\MeshTypes\MeshType2.cs" />
     <Compile Include="Models\MeshTypes\MeshType2Batch.cs" />
     <Compile Include="Models\MeshTypes\MeshType2NodeBatch.cs" />
@@ -184,7 +186,9 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Animations\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AssimpNet.4.1.0\build\AssimpNet.targets" Condition="Exists('..\packages\AssimpNet.4.1.0\build\AssimpNet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
