Improve command line arguments for DDS3ModelConverter; misc changes

--- a/Source/DDS3ModelLibraryCLI/DDS3ModelLibrary.Playground.csproj
+++ b/Source/DDS3ModelLibraryCLI/DDS3ModelLibrary.Playground.csproj
@@ -71,4 +71,7 @@
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(SolutionDir)..\Resources Resources /q /e /d /y /i</PostBuildEvent>
+  </PropertyGroup>
 </Project>
