--- a/Source/DDS3ModelStudio/DDS3ModelStudio.csproj
+++ b/Source/DDS3ModelStudio/DDS3ModelStudio.csproj
@@ -109,4 +109,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(SolutionDir)..\Resources Resources /q /e /d /y /i</PostBuildEvent>
+  </PropertyGroup>
 </Project>
