--- a/Source/DDS3ModelConverter/DDS3ModelConverter.csproj
+++ b/Source/DDS3ModelConverter/DDS3ModelConverter.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DDS3ModelConverter</RootNamespace>
     <AssemblyName>DDS3ModelConverter</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -54,10 +55,26 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Externals\SimpleCommandLine\Source\SimpleCommandLine\SimpleCommandLine.csproj">
+      <Project>{7a1f22a9-5eed-4f8d-a3c9-a99b8ecfacb0}</Project>
+      <Name>SimpleCommandLine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DDS3ModelLibrary\DDS3ModelLibrary.csproj">
       <Project>{D8D5B882-7D8F-4206-8DC7-DF0F0EB59A55}</Project>
       <Name>DDS3ModelLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Collections">
+      <Version>4.3.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(SolutionDir)..\Resources Resources /q /e /d /y /i</PostBuildEvent>
+  </PropertyGroup>
 </Project>
