--- a/Source/DDS3ModelLibraryCLI/DDS3ModelLibrary.Playground.csproj
+++ b/Source/DDS3ModelLibraryCLI/DDS3ModelLibrary.Playground.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DDS3ModelLibraryCLI</RootNamespace>
     <AssemblyName>DDS3ModelLibraryCLI</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,9 +36,6 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AtlusFileSystemLibrary">
-      <HintPath>..\..\..\AtlusFileSystemLibrary\Source\AtlusFileSystemLibrary\bin\Debug\AtlusFileSystemLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -57,6 +55,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Externals\AtlusFileSystemLibrary\Source\AtlusFileSystemLibrary\AtlusFileSystemLibrary.csproj">
+      <Project>{9960b785-6207-44e8-ba42-ec7f6f785344}</Project>
+      <Name>AtlusFileSystemLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DDS3ModelLibrary.Native\DDS3ModelLibrary.Native.vcxproj">
+      <Project>{9034cdf5-52ac-4e6c-9759-879b0b4f3887}</Project>
+      <Name>DDS3ModelLibrary.Native</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DDS3ModelLibrary\DDS3ModelLibrary.csproj">
       <Project>{d8d5b882-7d8f-4206-8dc7-df0f0eb59a55}</Project>
       <Name>DDS3ModelLibrary</Name>
